--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'com.example.quantumincremental'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.quantumincremental"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+
+    implementation "androidx.fragment:fragment:1.3.6"
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
